tests/suite/snapshots/suite__check__tests__check__bad_subclass_initialize_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_subclass_initialize_1.xi:5:12]
   │
 5 │     b: B = new A
   ·     ──┬─   ──┬──  
   ·       ╰─────────── Expected B because of this
   ·              │    
   ·              ╰──── Expected B but found A
───╯

