tests/suite/snapshots/suite__check__tests__check__bad_subclass_initialize_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_subclass_initialize_2.xi:6:12]
   │
 6 │     b: B = new C
   ·     ──┬─   ──┬──  
   ·       ╰─────────── Expected B because of this
   ·              │    
   ·              ╰──── Expected B but found C
───╯

