tests/suite/snapshots/suite__check__tests__check__bad_unbound_class_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_unbound_class_4_interface.ixi:1:8]
   │
 1 │ foo(a: A)
   ·        ┬  
   ·        ╰── Unbound class A
───╯

